--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2.3.4
-    - uses: olafurpg/setup-scala@v10
+    - uses: actions/setup-java@v4
       with:
-        java-version: "adopt@1.${{ matrix.java }}"
+        java-version: "${{ matrix.java }}"
+        distribution: adopt
     - uses: coursier/cache-action@v5
     - run: sbt -v "+ test"
